# rusty-green-kernel

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
benches/: direct_evaluator_benchmarks.rs
rusty_green_kernel/: __init__.py
rusty_green_kernel/test/: test_rusty_green_kernel.py
src/: c_api.rs  evaluators.rs  helmholtz.rs  kernels.rs  laplace.rs  lib.rs  modified_helmholtz.rs
src/evaluators/: base.rs  helmholtz.rs  laplace.rs  modified_helmholtz.rs
