[package]
name = "rusty-green-kernel"
version = "0.1.0"
authors = ["Timo Betcke <timo.betcke@gmail.com>"]
edition = "2018"
description = "A library for the evaluation of potential sums for the Laplace, Helmholtz and modified Helmholtz kernel."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-green-kernel"
repository = "https://github.com/rusty-fast-solvers/rusty-green-kernel"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_green_kernel"
crate-type = ["lib", "cdylib"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
approx = "0.4"
num = "0.4"
rand = "0.8"
rusty-kernel-tools = { version = "0.1", path = "../rusty-kernel-tools"}

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]


[[bench]]
name = "direct_evaluator_benchmarks"
harness = false


